  markup.
- Added IRC URLs to AsciiDoc inline macros.
- Added `depth` attribute to `include::[]` system macro.
- Added 'footnoteref' inline macro.
- Added 'stylesheet' XHTML attribute to specify additional custom CSS
  stylesheet.
- If a paragraph style is specified it will be added to the XHTML
  'class' attribute and DocBook 'role' attribute.

.Bug fixes
- Escaped quote skipped over leading and trailing quote instead of
  just the leading quote.
- Fixed bug that was causing false negative safe mode warnings (patch
  submitted by Julien Palmas).
- Placed priority of AttributeEntry, AttributeList and BlockTitle
  above Title.  This ensures an  AttributeEntry, AttributeList or
  BlockTitle followed by a same length leading ListingBlock delimiter
  is not mistaken for a two-line title.
- Vim syntax highlighter: fixed multi-line quoted text.
- Contstrained quote termination after non-space character enforced.
- Vim syntax highlighter: unterminated quoted text is no longer
  highlighted.
- Vim syntax highlighter: passthroughs now exactly match AsciiDoc
  semantics.
- Vim syntax highlighter: escaped quoted text, attribute references
  and inline macros are not highlighted.
- Vim syntax highlighter: TODO's highlighted in CommentBlocks (thanks
  to Scott Wall); non-greedy pass:[$$...$$].
- Vim syntax highlighter: Comment lines mistaken for vertical list
  labels (thanks to Scott Wall).
- Vim syntax highlighter: Single unmatched $$ mistakenly highlighted
  remaining text (patch contributed by Scott Wall).
- Callouts now work in source highlighted listing generated by
  dblatex.
- Fixed exception that occured if undefined attribute was present in
  filter command.
- AttributeList block can now follow a paragraph without intervening
  blank line.
- The include macro tabsize attribute is no longer propagated to
  nested includes.

.Omissions
The following features were implemented but then but removed from this
release:
